--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@ body {
 #page-nav {
     width: 100%;
     background: white;
-    /* If you want the navigation bar to stick on top
-  position: sticky;
-  top: 0;
-  */
+    text-align: right;
+    /* If you want the navigation bar to stick on top*/
+    position: sticky;
+    top: 0;
+
 }
 
 /* Hide Hamburger */
@@ -74,7 +75,7 @@ body {
     width: 100vw;
     height: 100vw;
     background-image: url(Billeder/splash_2.png);
-    background-size: 100%;
+    background-size: cover;
 }
 
 @media (orientation: landscape) {
