--- a/style.css
+++ b/style.css
@@ -136,16 +136,14 @@ body {
 }
 
 /*Footer*/
-
-body {
-    display: flex;
-    flex-direction: column;
-}
-
-.content {
-    flex: 1 0 auto;
-}
-
 .footer {
-    flex-shrink: 0;
+    text-align: center;
+}
+
+#col_logo .top_logo {
+    width: 20vw;
+    height: 20vw;
+    background-image: url(Billeder/logo_white_background.jpg);
+    background-size: 100%;
+
 }
