--- a/style.css
+++ b/style.css
@@ -149,3 +149,28 @@ body {
     font-size: 25px;
     margin: 2vw;
 }
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+}
+
+/* Facebook */
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-instagram {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-envelope {
+    background: #3B5998;
+    color: white;
+}
