--- a/style.css
+++ b/style.css
@@ -151,26 +151,9 @@ body {
 }
 
 .fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 30px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 50%;
+    width: 50px;
 }
 
-/* Facebook */
-.fa-facebook {
-    background: #3B5998;
-    color: white;
-}
-
-.fa-instagram {
-    background: #3B5998;
-    color: white;
-}
-
-.fa-envelope {
-    background: #3B5998;
-    color: white;
+.copyright {
+    font-size: 9px;
 }
