--- a/style.css
+++ b/style.css
@@ -173,6 +173,23 @@ h1 {
 
 }
 
+/*Portfolio*/
+
+.portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: white;
+    justify-content: center;
+}
+
+.portfolio div {
+    width: 30vw;
+    height: 30vw;
+    background-color: #f1f1f1;
+    margin: 10px;
+    padding: 20px;
+    font-size: 30px;
+}
 
 /*Contact*/
 
