--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ h1 {
     }
 }
 
-@media only screen and (min-width: 500px) {
+@media only screen and (max-width: 768px) {
     #splash {
         width: 100vw;
         height: 56.25vw;
