--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ h1 {
 
 @media only screen and (max-width: 768px) {
     #splash {
-        width: 100vw;
+        width: 100%;
         height: 56.25vw;
         background-position: 25% 32%;
     }
@@ -277,6 +277,6 @@ input[type=submit]:hover {
 
 .copyright {
     font-size: 10px;
-    margin: 2vw;
+    margin: 4vw;
     justify-content: center;
 }
